add on click go to page quran for list sureh & juz & hezb

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".splash" />
-        <activity android:name=".intro" />
+        <activity android:name=".Quran_SlidePage"></activity>
     </application>
 
 </manifest>
